Seed SeLion 2.0.0-SNAPSHOT with Selenium 3-beta
- Update SeLion grid to be Selenium 3-beta compatible
- Update Java version to 8
- Update Maven version to 3.2.x
- Add .editorconfig rules
- Add github new issue and PR templates
- Update README.MD